--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -21,11 +21,11 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageIcon>icon.png</PackageIcon>
-    <PackageReleaseNotes>Fixed issue with default setup not being applied to auto-generated data</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed issue with default setup not being applied to auto-generated data and updated to latest pre-release of AutoFixture to remove warnings for vulnerabilities</PackageReleaseNotes>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AutoFixture" Version="4.18.1" />
+    <PackageReference Include="AutoFixture" Version="5.0.0-preview0012" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
